wandb/run-20200408_222030-1177t0a1/output.log
torch.Size([10, 4, 2000])
Traceback (most recent call last):
  File "train.py", line 17, in <module>
    import viz
  File "/home/Wr1t3R/PQRST/unet/viz.py", line 30
    ax2.set_color_cycle(color_table_y)
      ^
SyntaxError: invalid syntax
